<resources>
    <string name="app_name">FaceWatch</string>
    <string name="home">Home</string>
    <string name="capture_button">capture button</string>
    <string name="gallery_button">gallery button</string>
    <string name="identifying_faces">Identifying faces…</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll No.</string>
    <string name="login">Login</string>
    <string name="forgot_password_click_here_to_reset">Forgot password? Click here to reset</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_faces_to_recognize">No faces to recognize</string>
    <string name="signing_in">Signing In…</string>
    <string name="signing_up">Creating New User...</string>
    <string name="user_type_1">Admin</string>
    <string name="user_type_2">Student</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="admin">Admin</string>
    <string name="hello_with_comma">Hello, </string>
    <string name="number_of_photos_uploaded">Number of photos uploaded: </string>
    <string name="tap_either_button_to_upload">Tap either button to upload photo via Camera or upload existing photo from gallery.</string>
    <string name="logout">Logout</string>
    <string name="perform_face_recognition">Perform face recognition</string>
    <string name="training_model">Training model…</string>
    <string name="channel_name">Facewatch default channel</string>
    <string name="channel_description">Default channel for facewatch notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="okay">Okay</string>
    <string name="course_code">Course Code</string>
    <string name="attendance_history">Attendance History</string>
    <string name="no_attendance_records_found">No attendance records found !</string>
    <string-array name="user_type_array">
        <item>Select User Type</item>
        <item>Admin</item>
        <item>Student</item>
    </string-array>
</resources>
