<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/dark_background">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/personRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/galleryButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/gallery_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/captureButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gallery_icon" />

    <ImageButton
        android:id="@+id/captureButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/capture_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/galleryButton"
        app:srcCompat="@drawable/camera_icon" />

    <TextView
        android:id="@+id/noFacesToRecognizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_faces_to_recognize"
        android:textColor="@color/neutral_font_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/captureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>